# ray-maps

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: testRaymaps.yaml  testSegments.yaml  tests.yaml
baseline/: baseline.py  baseline_basic.py
data_visualization/: biasVis.py
include/: aabb.hpp  estimator.hpp  kdtree.hpp  ray.hpp
qmc/: main.py  pyproject.toml  pyrightconfig.json  test.py
qmc/sampler/: direction_numbers.py  (+6 more)
quasi_monte_carlo/: pyproject.toml  pyrightconfig.json  requirements.txt
quasi_monte_carlo/debug/: A_convergence.py  _cache.py  _setup.py
quasi_monte_carlo/outputs/: render_1000x111_64spp_vec.exr  render_100x100_64spp_scalar.exr  render_128x128_8spp.exr  render_400x400_64spp.exr  render_400x400_64spp_vec.exr
quasi_monte_carlo/src/qmc/: main.py  pathtracer.py  pathtracer_vec.py  renderer.py  setup.py  test.py
quasi_monte_carlo/src/qmc.egg-info/: PKG-INFO  SOURCES.txt
quasi_monte_carlo/src/qmc/sampler/: constants.py  direction_numbers.py  independant_sampler.py  independent_sampler.py  padded_sobol_sampler.py  sampler.py  scramble.py  sobol_core.py  sobol_sampler.py  visualize_permutation.py
quasi_monte_carlo/tests/: conftest.py  test_direction_numbers.py  test_samplers.py
segment_blt/: FINDINGS.md  main.py  pre_sync_backup_20260612.tgz  pyproject.toml  pyrightconfig.json  requirements.txt
segments/: pyproject.toml  requirements.txt
spp_renders-50x50-d-1/: reference.exr
src/: aabb.cpp  bias.cpp  estimator.cpp  kdtree.cpp  ray.hpp
tests/: helpers.hpp  testAABB.hpp  testBuildKDTree.hpp  testEstimator.hpp  tests.cpp
(+1762 files in other folders)
